Updated services section and fixed contact form link

--- a/index.html
+++ b/index.html
@@ -180,13 +180,14 @@
                     <div class="service-card bg-white p-8 rounded-2xl flex flex-col smooth-reveal">
                         <div class="flex-grow">
                             <h3 class="text-2xl font-bold" style="color: var(--color-dark);">Digital Experience Audit</h3>
-                            <p class="mt-2 text-gray-600">A remote deep-dive into your online customer journey.</p>
+                            <p class="mt-2 text-gray-600">A remote deep-dive into your online customer journey, built on our 3 Pillars of Digital Trust.</p>
                              <p class="text-4xl font-bold mt-6" style="color: var(--color-primary);">$795</p>
                             <ul class="mt-6 space-y-4 text-gray-600">
-                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>60-Min Business Context Interview</span></li>
-                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Website & Social Media Audit</span></li>
-                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Online Reputation Analysis (Google, Yelp)</span></li>
-                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Action Plan & Video Walkthrough</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Analysis of Website & Social Media</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Online Reputation Deep Dive</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>Prioritized Action Plan Report</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>20-Min Recorded Video Presentation</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0" style="color: var(--color-primary);"></i><span>90-Minute Strategy Session</span></li>
                             </ul>
                         </div>
                         <button class="schedule-call-btn mt-8 w-full bg-white border font-semibold py-3 rounded-lg hover:bg-gray-50" style="border-color: var(--color-primary); color: var(--color-primary);">Get Started</button>
@@ -202,7 +203,7 @@
                                 <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0"></i><span>Psychologically-Designed Customer Survey</span></li>
                                 <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0"></i><span>In-Person Environmental Observation</span></li>
                                 <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0"></i><span>15-20 Page Diagnostic Report</span></li>
-                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0"></i><span>90-Min Live Strategy Session</span></li>
+                                <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 mr-3 mt-1 shrink-0"></i><span>Full 8-Pillar Diagnostic Analysis</span></li>
                             </ul>
                         </div>
                         <button class="schedule-call-btn mt-8 w-full bg-white font-semibold py-3 rounded-lg cta-button" style="color: var(--color-primary);">Book Now</button>
@@ -281,8 +282,8 @@
                     </div>
                     <div class="advantage-card bg-gray-50 p-6 rounded-lg smooth-reveal" style="transition-delay: 450ms;">
                         <i data-lucide="database-zap" class="w-10 h-10 mb-4" style="color: var(--color-primary);"></i>
-                        <h3 class="font-semibold text-xl">Rigorous Data Synthesis</h3>
-                        <p class="text-gray-600 mt-2">We use a 5-source method (Survey, Observation, Reviews, etc.) for a complete, objective picture.</p>
+                        <h3 class="font-semibold text-xl">8-Pillar Diagnostic</h3>
+                        <p class="text-gray-600 mt-2">Our proprietary 8-Pillar process synthesizes data from every angle for a complete, objective picture.</p>
                     </div>
                 </div>
             </div>
@@ -300,25 +301,25 @@
                         <div class="md:flex md:justify-end md:mr-8 mb-12 relative smooth-reveal">
                             <div class="md:w-5/12"><div class="bg-white p-6 rounded-lg shadow-md">
                                 <div class="absolute w-12 h-12 flex items-center justify-center text-xl font-bold rounded-full -left-6 md:left-auto md:-right-6 top-1/2 -translate-y-1/2" style="background-color: var(--color-primary); color: white;">1</div>
-                                <h3 class="text-xl font-semibold">Discovery & Goal Setting</h3><p class="mt-2 text-gray-600">We start with a deep dive into your business, goals, and perceived challenges.</p>
+                                <h3 class="text-xl font-semibold">Discovery & Goal Setting</h3><p class="mt-2 text-gray-600">We start with a deep dive into your business, goals, and perceived challenges to establish a baseline.</p>
                             </div></div>
                         </div>
                         <div class="md:flex md:justify-start md:ml-8 mb-12 relative smooth-reveal">
                              <div class="md:w-5/12"><div class="bg-white p-6 rounded-lg shadow-md">
                                 <div class="absolute w-12 h-12 flex items-center justify-center text-xl font-bold rounded-full -left-6 md:-left-6 top-1/2 -translate-y-1/2" style="background-color: var(--color-primary); color: white;">2</div>
-                                <h3 class="text-xl font-semibold">Multi-Source Data Collection</h3><p class="mt-2 text-gray-600">We gather data from surveys, online reviews, and in-person observation.</p>
+                                <h3 class="text-xl font-semibold">8-Pillar Data Collection</h3><p class="mt-2 text-gray-600">We gather data using our full diagnostic framework, including surveys, observation, and reputation analysis.</p>
                             </div></div>
                         </div>
                         <div class="md:flex md:justify-end md:mr-8 mb-12 relative smooth-reveal">
                              <div class="md:w-5/12"><div class="bg-white p-6 rounded-lg shadow-md">
                                 <div class="absolute w-12 h-12 flex items-center justify-center text-xl font-bold rounded-full -left-6 md:left-auto md:-right-6 top-1/2 -translate-y-1/2" style="background-color: var(--color-primary); color: white;">3</div>
-                                <h3 class="text-xl font-semibold">Analysis & Synthesis</h3><p class="mt-2 text-gray-600">We connect the dots to reveal the 'why' behind customer behavior.</p>
+                                <h3 class="text-xl font-semibold">Analysis & Synthesis</h3><p class="mt-2 text-gray-600">We connect the dots to reveal the 'why' behind customer behavior and quantify its financial impact.</p>
                             </div></div>
                         </div>
                         <div class="md:flex md:justify-start md:ml-8 mb-12 relative smooth-reveal">
                             <div class="md:w-5/12"><div class="bg-white p-6 rounded-lg shadow-md">
                                 <div class="absolute w-12 h-12 flex items-center justify-center text-xl font-bold rounded-full -left-6 md:-left-6 top-1/2 -translate-y-1/2" style="background-color: var(--color-primary); color: white;">4</div>
-                                <h3 class="text-xl font-semibold">Deliverables & Action Plan</h3><p class="mt-2 text-gray-600">You get a detailed report, video summary, and a live session to build your 90-day plan.</p>
+                                <h3 class="text-xl font-semibold">Deliverables & Action Plan</h3><p class="mt-2 text-gray-600">You get a report, a visual customer journey map, and a live session to build your 90-day plan.</p>
                             </div></div>
                         </div>
                     </div>
@@ -395,7 +396,7 @@
                             <i data-lucide="chevron-down" class="faq-arrow transform transition-transform duration-300" style="color: var(--color-primary);"></i>
                         </div>
                         <div class="faq-answer pt-4 text-gray-600">
-                            <p>This is a common concern, which is why the audit is a multi-source analysis. If survey response rates are low, we simply increase the statistical weight of the other four data sources: the in-person observation, online review analysis, business context interview, and your internal data. This ensures the final diagnosis is always robust, comprehensive, and not dependent on any single point of failure.</p>
+                            <p>This is a common concern, which is why the audit is a multi-source analysis. If survey response rates are low, we simply increase the statistical weight of the other data sources in our 8-Pillar Diagnostic: the in-person observation, online review analysis, business context interview, and your internal data. This ensures the final diagnosis is always robust, comprehensive, and not dependent on any single point of failure.</p>
                         </div>
                     </div>
                      <div class="bg-white p-6 rounded-lg shadow-sm smooth-reveal" style="transition-delay: 150ms;">
@@ -748,6 +749,3 @@
     </script>
 </body>
 </html>
-
-
-
